Dodanie ładowani i zapisu zbioru comments.xml

--- a/introduce.ipynb
+++ b/introduce.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMT95SW17gaXD72uP4QyaMm",
+      "authorship_tag": "ABX9TyPGM/S1G6xcVCNATEGJuhJ1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -781,7 +781,7 @@
       "source": [
         "import pyspark\n",
         "from pyspark.sql import SparkSession\n",
-        "from pyspark.sql.types import StructType, StructField, LongType, StringType \n",
+        "from pyspark.sql.types import StructType, StructField, LongType, StringType, BooleanType, DateType \n",
         "\n",
         "spark = SparkSession.builder.master(\"local[4]\").appName('SparkByExamples.com').config('spark.jars.packages', 'com.databricks:spark-xml_2.12:0.6.0').getOrCreate()\n",
         "\n",
@@ -802,16 +802,16 @@
         "    StructField(\"_ViewCount\", LongType(), True) \n",
         "]) \n",
         "\n",
-        "postLinksDF = spark.read \\\n",
+        "postsDF = spark.read \\\n",
         "          .format('com.databricks.spark.xml') \\\n",
         "          .options(rootTag='posts') \\\n",
         "          .options(rowTag='row') \\\n",
         "          .schema(schema) \\\n",
         "          .load('/content/input/Posts.xml')\n",
         "\n",
-        "postLinksDF.printSchema()          \n",
+        "postsDF.printSchema()          \n",
         "\n",
-        "postLinksDF = postLinksDF \\\n",
+        "postsDF = postsDF \\\n",
         "                .withColumnRenamed(\"_AnswerCount\", \"AnswerCount\") \\\n",
         "                .withColumnRenamed(\"_Body\", \"Body\") \\\n",
         "                .withColumnRenamed(\"_CommentCount\", \"CommentCount\") \\\n",
@@ -826,9 +826,9 @@
         "                .withColumnRenamed(\"_Title\", \"Title\") \\\n",
         "                .withColumnRenamed(\"_ViewCount\", \"ViewCount\")\n",
         "\n",
-        "postLinksDF.show(n=20, truncate=True)\n",
+        "postsDF.show(n=20, truncate=True)\n",
         "\n",
-        "postLinksDF \\\n",
+        "postsDF \\\n",
         "      .write \\\n",
         "      .partitionBy(\"PostTypeId\") \\\n",
         "      .mode(\"overwrite\") \\\n",
@@ -839,9 +839,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tz2kAJ8Hk_L7",
-        "outputId": "43b6d552-4a0c-4e44-bf3e-ec08dc5b217a"
+        "outputId": "cff4a6f1-5346-49e3-c70e-b66ecc01c84d"
       },
-      "execution_count": 2,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
@@ -904,51 +904,77 @@
     {
       "cell_type": "code",
       "source": [
+        "schema = StructType([ \\\n",
+        "    StructField(\"_Class\", LongType(), True), \\\n",
+        "    StructField(\"_Date\", StringType(), True), \\\n",
+        "    StructField(\"_CommentCount\", LongType(), True), \\\n",
+        "    StructField(\"_Id\", LongType(), True), \\\n",
+        "    StructField(\"_Name\", StringType(), True), \\\n",
+        "    StructField(\"_TagBased\", BooleanType(), True), \\\n",
+        "    StructField(\"_UserId\", LongType(), True)    \n",
+        "])\n",
+        "\n",
         "badgesDF = spark.read \\\n",
         "          .format('com.databricks.spark.xml') \\\n",
         "          .options(rootTag='badges') \\\n",
         "          .options(rowTag='row') \\\n",
+        "          .schema(schema) \\\n",
         "          .load('/content/input/Badges.xml')\n",
         "\n",
-        "badgesDF.show()          "
+        "badgesDF = badgesDF \\\n",
+        "                .withColumnRenamed(\"_Class\", \"Class\") \\\n",
+        "                .withColumnRenamed(\"_Date\", \"Date\") \\\n",
+        "                .withColumnRenamed(\"_CommentCount\", \"CommentCount\") \\\n",
+        "                .withColumnRenamed(\"_Id\", \"Id\") \\\n",
+        "                .withColumnRenamed(\"_Name\", \"Name\") \\\n",
+        "                .withColumnRenamed(\"_TagBased\", \"TagBased\") \\\n",
+        "                .withColumnRenamed(\"_UserId\", \"UserId\")\n",
+        "\n",
+        "badgesDF.show()\n",
+        "\n",
+        "badgesDF \\\n",
+        "      .write \\\n",
+        "      .partitionBy(\"Class\") \\\n",
+        "      .mode(\"overwrite\") \\\n",
+        "      .parquet(\"/content/output/badges.parquet\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "k0mWYqay1eJR",
-        "outputId": "c28a32d5-59ba-4b50-860b-aa4b77f8f604"
+        "outputId": "e2aec9be-690c-4fc2-beb0-acccd076ff37"
       },
-      "execution_count": 7,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+------+--------------------+---+--------------+---------+-------+\n",
-            "|_Class|               _Date|_Id|         _Name|_TagBased|_UserId|\n",
-            "+------+--------------------+---+--------------+---------+-------+\n",
-            "|     3|2012-01-17T20:56:...|  1|Autobiographer|    false|      1|\n",
-            "|     3|2012-01-17T20:56:...|  2|Autobiographer|    false|      2|\n",
-            "|     3|2012-01-17T20:56:...|  3|Autobiographer|    false|      3|\n",
-            "|     3|2012-01-17T21:01:...|  4|Autobiographer|    false|      8|\n",
-            "|     3|2012-01-17T21:06:...|  5|    Analytical|    false|      7|\n",
-            "|     3|2012-01-17T21:06:...|  6|Autobiographer|    false|     11|\n",
-            "|     3|2012-01-17T21:11:...|  7|Autobiographer|    false|     20|\n",
-            "|     3|2012-01-17T21:11:...|  8|Autobiographer|    false|     22|\n",
-            "|     3|2012-01-17T21:11:...|  9|Autobiographer|    false|     29|\n",
-            "|     3|2012-01-17T21:11:...| 10|       Student|    false|      5|\n",
-            "|     3|2012-01-17T21:11:...| 11|     Supporter|    false|      9|\n",
-            "|     3|2012-01-17T21:11:...| 12|     Supporter|    false|     12|\n",
-            "|     3|2012-01-17T21:11:...| 13|     Supporter|    false|     14|\n",
-            "|     3|2012-01-17T21:11:...| 14|     Supporter|    false|     20|\n",
-            "|     3|2012-01-17T21:11:...| 15|     Supporter|    false|     22|\n",
-            "|     3|2012-01-17T21:16:...| 16|Autobiographer|    false|     35|\n",
-            "|     3|2012-01-17T21:16:...| 17|       Student|    false|      8|\n",
-            "|     3|2012-01-17T21:16:...| 18|     Supporter|    false|      5|\n",
-            "|     3|2012-01-17T21:16:...| 19|     Supporter|    false|      7|\n",
-            "|     3|2012-01-17T21:16:...| 20|     Supporter|    false|     19|\n",
-            "+------+--------------------+---+--------------+---------+-------+\n",
+            "+-----+--------------------+------------+---+--------------+--------+------+\n",
+            "|Class|                Date|CommentCount| Id|          Name|TagBased|UserId|\n",
+            "+-----+--------------------+------------+---+--------------+--------+------+\n",
+            "|    3|2012-01-17T20:56:...|        null|  1|Autobiographer|   false|     1|\n",
+            "|    3|2012-01-17T20:56:...|        null|  2|Autobiographer|   false|     2|\n",
+            "|    3|2012-01-17T20:56:...|        null|  3|Autobiographer|   false|     3|\n",
+            "|    3|2012-01-17T21:01:...|        null|  4|Autobiographer|   false|     8|\n",
+            "|    3|2012-01-17T21:06:...|        null|  5|    Analytical|   false|     7|\n",
+            "|    3|2012-01-17T21:06:...|        null|  6|Autobiographer|   false|    11|\n",
+            "|    3|2012-01-17T21:11:...|        null|  7|Autobiographer|   false|    20|\n",
+            "|    3|2012-01-17T21:11:...|        null|  8|Autobiographer|   false|    22|\n",
+            "|    3|2012-01-17T21:11:...|        null|  9|Autobiographer|   false|    29|\n",
+            "|    3|2012-01-17T21:11:...|        null| 10|       Student|   false|     5|\n",
+            "|    3|2012-01-17T21:11:...|        null| 11|     Supporter|   false|     9|\n",
+            "|    3|2012-01-17T21:11:...|        null| 12|     Supporter|   false|    12|\n",
+            "|    3|2012-01-17T21:11:...|        null| 13|     Supporter|   false|    14|\n",
+            "|    3|2012-01-17T21:11:...|        null| 14|     Supporter|   false|    20|\n",
+            "|    3|2012-01-17T21:11:...|        null| 15|     Supporter|   false|    22|\n",
+            "|    3|2012-01-17T21:16:...|        null| 16|Autobiographer|   false|    35|\n",
+            "|    3|2012-01-17T21:16:...|        null| 17|       Student|   false|     8|\n",
+            "|    3|2012-01-17T21:16:...|        null| 18|     Supporter|   false|     5|\n",
+            "|    3|2012-01-17T21:16:...|        null| 19|     Supporter|   false|     7|\n",
+            "|    3|2012-01-17T21:16:...|        null| 20|     Supporter|   false|    19|\n",
+            "+-----+--------------------+------------+---+--------------+--------+------+\n",
             "only showing top 20 rows\n",
             "\n"
           ]
@@ -967,52 +993,68 @@
     {
       "cell_type": "code",
       "source": [
+        "schema = StructType([ \\\n",
+        "    StructField(\"_ContentLicense\", StringType(), True), \\\n",
+        "    StructField(\"_CreationDate\", StringType(), True), \\\n",
+        "    StructField(\"_Id\", LongType(), True), \\\n",
+        "    StructField(\"_PostId\", LongType(), True), \\\n",
+        "    StructField(\"_Score\", LongType(), True), \\\n",
+        "    StructField(\"_Text\", StringType(), True), \\\n",
+        "    StructField(\"_UserDisplayName\", StringType(), True), \\\n",
+        "    StructField(\"_UserId\", LongType(), True)        \n",
+        "])\n",
+        "\n",
         "commentsDF = spark.read \\\n",
         "          .format('com.databricks.spark.xml') \\\n",
         "          .options(rootTag='comments') \\\n",
         "          .options(rowTag='row') \\\n",
+        "          .schema(schema) \\\n",
         "          .load('/content/input/Comments.xml')\n",
         "\n",
-        "commentsDF.show()  "
+        "commentsDF = commentsDF \\\n",
+        "                .withColumnRenamed(\"_ContentLicense\", \"ContentLicense\") \\\n",
+        "                .withColumnRenamed(\"_CreationDate\", \"CreationDate\") \\\n",
+        "                .withColumnRenamed(\"_Id\", \"Id\") \\\n",
+        "                .withColumnRenamed(\"_PostId\", \"PostId\") \\\n",
+        "                .withColumnRenamed(\"_Score\", \"Score\") \\\n",
+        "                .withColumnRenamed(\"_Text\", \"Text\") \\\n",
+        "                .withColumnRenamed(\"_UserDisplayName\", \"UserDisplayName\") \\\n",
+        "                .withColumnRenamed(\"_UserId\", \"UserId\") \\\n",
+        "\n",
+        "commentsDF = commentsDF \\\n",
+        "  .select([\"Id\", \"PostId\", \"UserId\", \"CreationDate\", \"ContentLicense\", \\\n",
+        "           \"UserDisplayName\", \"Score\", \"Text\"])\n",
+        "\n",
+        "commentsDF.printSchema()\n",
+        "\n",
+        "commentsDF \\\n",
+        "    .write \\\n",
+        "    .partitionBy(\"ContentLicense\") \\\n",
+        "    .mode(\"overwrite\") \\\n",
+        "    .parquet(\"/content/output/comments.parquet\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "oSb3uY7F12HG",
-        "outputId": "955e96b7-2df4-40da-8458-525c0c4ca2e1"
+        "outputId": "3c991557-c337-480e-efd4-0e3cdf54794d"
       },
-      "execution_count": 8,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+---------------+--------------------+---+-------+------+--------------------+----------------+-------+\n",
-            "|_ContentLicense|       _CreationDate|_Id|_PostId|_Score|               _Text|_UserDisplayName|_UserId|\n",
-            "+---------------+--------------------+---+-------+------+--------------------+----------------+-------+\n",
-            "|   CC BY-SA 3.0|2012-01-17T21:29:...|  1|      7|     2|but that still do...|            null|     29|\n",
-            "|   CC BY-SA 3.0|2012-01-17T21:29:...|  2|      7|     1|Yeah, the show ex...|            null|      5|\n",
-            "|   CC BY-SA 3.0|2012-01-17T21:33:...|  3|     11|     4|I should have men...|            null|     43|\n",
-            "|   CC BY-SA 3.0|2012-01-17T21:36:...|  5|     10|     0|As near as I can ...|            null|     37|\n",
-            "|   CC BY-SA 3.0|2012-01-17T21:38:...|  7|     10|     0|I've updated with...|            null|      9|\n",
-            "|   CC BY-SA 3.0|2012-01-17T21:46:...| 13|     15|     0|Why won't this wo...|            null|     37|\n",
-            "|   CC BY-SA 3.0|2012-01-17T21:49:...| 14|     17|     2|My question is ab...|            null|     44|\n",
-            "|   CC BY-SA 3.0|2012-01-17T21:52:...| 16|     17|     0|If you want Wolfr...|            null|      9|\n",
-            "|   CC BY-SA 3.0|2012-01-17T21:53:...| 17|     17|     0|@Eli I think the ...|            null|     18|\n",
-            "|   CC BY-SA 3.0|2012-01-17T21:53:...| 18|     17|     0|@Sky: something l...|            null|     50|\n",
-            "|   CC BY-SA 3.0|2012-01-17T21:54:...| 19|     17|     0|Oh, I see what yo...|            null|      9|\n",
-            "|   CC BY-SA 3.0|2012-01-17T21:56:...| 23|     15|     0|actually, i don't...|            null|     47|\n",
-            "|   CC BY-SA 3.0|2012-01-17T21:57:...| 24|     17|     0|@Jowen: This is t...|            null|     44|\n",
-            "|   CC BY-SA 3.0|2012-01-17T22:03:...| 28|     17|     2|@Sky: oops. [Here...|            null|     50|\n",
-            "|   CC BY-SA 3.0|2012-01-17T22:05:...| 30|     17|     0|@J.M.: That's exa...|            null|     44|\n",
-            "|   CC BY-SA 3.0|2012-01-17T22:10:...| 35|     27|     0|So I'll use Wolfr...|            null|     44|\n",
-            "|   CC BY-SA 3.0|2012-01-17T22:12:...| 36|     17|     0|@Sky: Yes, but ca...|            null|     50|\n",
-            "|   CC BY-SA 3.0|2012-01-17T22:13:...| 37|      4|     0|Note that `Absolu...|            null|     77|\n",
-            "|   CC BY-SA 3.0|2012-01-17T22:16:...| 39|     30|     0|Interesting blog ...|            null|     44|\n",
-            "|   CC BY-SA 3.0|2012-01-17T22:16:...| 40|     28|     5|If need be, `Root...|            null|     50|\n",
-            "+---------------+--------------------+---+-------+------+--------------------+----------------+-------+\n",
-            "only showing top 20 rows\n",
+            "root\n",
+            " |-- Id: long (nullable = true)\n",
+            " |-- PostId: long (nullable = true)\n",
+            " |-- UserId: long (nullable = true)\n",
+            " |-- CreationDate: string (nullable = true)\n",
+            " |-- ContentLicense: string (nullable = true)\n",
+            " |-- UserDisplayName: string (nullable = true)\n",
+            " |-- Score: long (nullable = true)\n",
+            " |-- Text: string (nullable = true)\n",
             "\n"
           ]
         }
