Realizacja punktu ANALIZA 4J

--- a/introduce.ipynb
+++ b/introduce.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPKU6i9pzWjaz0EvAR8fU1S",
+      "authorship_tag": "ABX9TyPB8SaC7ti5RP49bHioMrc5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2009,52 +2009,73 @@
       "source": [
         "### NIntegrate stops working for particular values 157305\n",
         "\n",
-        "postsDFAnalize4J = spark.read.parquet(\"/content/output/posts.parquet\").filter( (col('Id')==157305) | (col('ParentId') ==157305) | (col('Id') ==157313)  ).show(n=10, truncate=False)\n",
-        "#postsDFAnalize4J = spark.read.parquet(\"/content/output/posts.parquet\").filter(col('ParentId') == 1096).show(n=10, truncate=False)\n",
-        "votesDFAnalize4J = spark.read.parquet(\"/content/output/votes.parquet\").filter(col('PostId') == 157305).show(n=10, truncate=False)\n",
-        "tagsDFAnalize4J = spark.read.parquet(\"/content/output/posthistory.parquet\").filter(col('PostId') == 157305).show(n=10, truncate=False)\n",
-        "tagsDFAnalize4J = spark.read.parquet(\"/content/output/users.parquet\").filter( (col('Id') == 44960 ) | (col('Id') == 10917) ).show(n=10, truncate=False)\n",
-        "        \n",
-        "#312\n",
-        "#1096\n",
+        "postsDFAnalize4JAccepted = spark.read.parquet(\"/content/output/posts.parquet\") \\\n",
+        "                  .filter( (col('AcceptedAnswerId').isNotNull()) ) \\\n",
+        "                  .select(col('Id').alias('QuestId'),\n",
+        "                          col('ParentId').alias('QuestParentId'),\n",
+        "                          col('PostTypeId').alias('QuestPostTypeId'),\n",
+        "                          col('AcceptedAnswerId').alias('QuestAcceptedAnswerId'),\n",
+        "                          col('CreationDate').alias('QuestCreationDate'),\n",
+        "                          col('LastActivityDate').alias('QuestLastActivityDate')) \\\n",
+        "                  .orderBy(col('Id')) \\\n",
+        "                  .persist()\n",
+        "                  #.show(n=15, truncate=False)\n",
         "\n",
-        "# postsDFAnalize4j = spark.read.parquet(\"/content/output/posts.parquet\") \\ \n",
-        "#     .cache() \\\n",
-        "#     .show(n=10, truncate=False)"
+        "postsDFAnalize4JAppear = spark.read.parquet(\"/content/output/posts.parquet\") \\\n",
+        "                  .filter( (col('AcceptedAnswerId').isNull()) & (col('PostTypeId') == 2) ) \\\n",
+        "                  .select(col('Id').alias('AnwsId'),\n",
+        "                          col('ParentId').alias('AnwsParentId'),\n",
+        "                          col('PostTypeId').alias('AnwsPostTypeId'),\n",
+        "                          col('AcceptedAnswerId').alias('AnwsAcceptedAnswerId'),\n",
+        "                          col('CreationDate').alias('AnwsCreationDate'),\n",
+        "                          col('LastActivityDate').alias('AnwsLastActivityDate')) \\\n",
+        "                  .orderBy(col('Id')) \\\n",
+        "                  .persist()\n",
+        "                  #.show(n=15, truncate=False)\n",
+        "\n",
+        "resultDFAnalize4J = postsDFAnalize4JAccepted \\\n",
+        "                    .join(postsDFAnalize4JAppear, postsDFAnalize4JAppear.AnwsId == postsDFAnalize4JAccepted.QuestAcceptedAnswerId, 'inner') \\\n",
+        "                    .select(col('QuestId'), col('AnwsId') , \\\n",
+        "                            col('QuestPostTypeId'), col('AnwsPostTypeId'), \\\n",
+        "                            col('QuestAcceptedAnswerId'),\n",
+        "                            col('QuestLastActivityDate'), col('AnwsLastActivityDate'), \\\n",
+        "                            col('QuestCreationDate'), col('AnwsCreationDate')) \\\n",
+        "                    .orderBy(col('QuestId')) \\\n",
+        "                    .withColumn(\"DiffInSeconds\", col(\"AnwsCreationDate\").cast(\"long\") - col(\"QuestCreationDate\").cast(\"long\")) \\\n",
+        "                    .withColumn(\"DiffInMinutes\", floor(col(\"DiffInSeconds\") / 60)) \\\n",
+        "                    .withColumn(\"DiffInHours\", floor(col(\"DiffInSeconds\") / 3_600)) \\\n",
+        "                    .withColumn(\"DiffInDays\", floor(col(\"DiffInHours\") / 24)) \\\n",
+        "                    .withColumn(\"DiffInYears\", floor(col(\"DiffInDays\") / 365)) \\\n",
+        "                    .persist()\n",
+        "                    #.show(n=25, truncate=False) \n",
+        "\n",
+        "averageDFAnalize4J = resultDFAnalize4J \\\n",
+        "                    .select(avg('DiffInSeconds').alias('AvgTimeInSeconds')) \\\n",
+        "                    .withColumn(\"AvgTimeInMinutes\", floor(col(\"AvgTimeInSeconds\") / 60)) \\\n",
+        "                    .withColumn(\"AvgTimeInHours\", floor(col(\"AvgTimeInSeconds\") / 3_600)) \\\n",
+        "                    .withColumn(\"AvgTimeInDays\", floor(col(\"AvgTimeInHours\") / 24)) \\\n",
+        "                    .withColumn(\"AvgTimeInYears\", floor(col(\"AvgTimeInDays\") / 365)) \\\n",
+        "                    .show(truncate=False) \n",
+        "  \n"
       ],
       "metadata": {
         "id": "MCCdQ9N-zjPS",
-        "outputId": "d0330a51-e4a8-45af-e912-1aa2f10af0ba",
+        "outputId": "a16a7682-5953-410e-951f-3d69ee85df32",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+---+--------+----------+-----------+------------+-----+---------+-----------+------------+----------------+----+-----+----+----+-----+---+\n",
-            "|Id |ParentId|PostTypeId|OwnerUserId|CreationDate|Score|ViewCount|AnswerCount|CommentCount|LastActivityDate|Tags|Title|Body|Year|Month|Day|\n",
-            "+---+--------+----------+-----------+------------+-----+---------+-----------+------------+----------------+----+-----+----+----+-----+---+\n",
-            "+---+--------+----------+-----------+------------+-----+---------+-----------+------------+----------------+----+-----+----+----+-----+---+\n",
-            "\n",
-            "+---+------+------+----------+------------+------------+----+-----+---+\n",
-            "|Id |PostId|UserId|VoteTypeId|CreationDate|BountyAmount|Year|Month|Day|\n",
-            "+---+------+------+----------+------------+------------+----+-----+---+\n",
-            "+---+------+------+----------+------------+------------+----+-----+---+\n",
-            "\n",
-            "+---+------+-----------------+------+------------+------------+--------------+---------------+-------+----+----+-----+---+\n",
-            "|Id |PostId|PostHistoryTypeId|UserId|CreationDate|RevisionGUID|ContentLicense|UserDisplayName|Comment|Text|Year|Month|Day|\n",
-            "+---+------+-----------------+------+------------+------------+--------------+---------------+-------+----+----+-----+---+\n",
-            "+---+------+-----------------+------+------------+------------+--------------+---------------+-------+----+----+-----+---+\n",
-            "\n",
-            "+-----+---------+-----------------------+-----------------------+---------+-------+----------+-----+---------------------------+-------------------------------------------------------------------------------------------+-------------+-----------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------+----+-----+---+\n",
-            "|Id   |AccountId|CreationDate           |LastAccessDate         |DownVotes|UpVotes|Reputation|Views|WebsiteUrl                 |ProfileImageUrl                                                                            |Location     |DisplayName|AboutMe                                                                                                                                                                |Year|Month|Day|\n",
-            "+-----+---------+-----------------------+-----------------------+---------+-------+----------+-----+---------------------------+-------------------------------------------------------------------------------------------+-------------+-----------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------+----+-----+---+\n",
-            "|10917|277082   |2011-05-17 04:54:59.783|2021-10-12 23:35:20.493|0        |17     |101       |7    |https://www.happyhumans.com|https://www.gravatar.com/avatar/5a952e56e7dc9e4a07f9e2a86400efdb?s=128&d=identicon&r=PG&f=1|San Diego, CA|Sarah Lewis|<p>Christian, wife, mom, WordPress developer, and book nerd. Obsessed with food holidays, solar freakin' roadways, and Zapier. Impatiently awaiting transporters.</p>\\n|2011|5    |17 |\n",
-            "+-----+---------+-----------------------+-----------------------+---------+-------+----------+-----+---------------------------+-------------------------------------------------------------------------------------------+-------------+-----------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------+----+-----+---+\n",
+            "+-----------------+----------------+--------------+-------------+--------------+\n",
+            "|AvgTimeInSeconds |AvgTimeInMinutes|AvgTimeInHours|AvgTimeInDays|AvgTimeInYears|\n",
+            "+-----------------+----------------+--------------+-------------+--------------+\n",
+            "|5402904.511154599|90048           |1500          |62           |0             |\n",
+            "+-----------------+----------------+--------------+-------------+--------------+\n",
             "\n"
           ]
         }
