Implementacja analizy przypadku 4H

--- a/introduce.ipynb
+++ b/introduce.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPb+2h9kz5qB5jBCBLuc/Db",
+      "authorship_tag": "ABX9TyNh/7o6omqmIt4v6Tr0/TLu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2019,7 +2019,7 @@
         "                   .filter(col(\"Title\").isNotNull()) \\\n",
         "                   .cache()\n",
         "\n",
-        "resultDFAnalize4H = postsDFAnaliza4H.withColumn('Word', f.explode(f.split(f.col('Title'), ' '))) \\\n",
+        "resultDFAnalize4H = postsDFAnaliza4H.withColumn('Word', explode(split(col('Title'), ' '))) \\\n",
         "                   .filter(~lower(col(\"Word\")).isin(stopwords)) \\\n",
         "                   .groupBy('Word') \\\n",
         "                   .count() \\\n",
@@ -2034,9 +2034,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Q7_De0Z5Xmd9",
-        "outputId": "8ca0d8b3-ec54-41fc-e3d8-6d3ccae9c4e2"
+        "outputId": "1d8f8bd8-00ea-4867-a699-e528e63486fa"
       },
-      "execution_count": 87,
+      "execution_count": 88,
       "outputs": [
         {
           "output_type": "stream",
